# TradingAgents-Funds-Runner

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  pyproject.toml
.github/workflows/: deploy-terraform.yml
runner/: convert.py  main.py
runner/uploaders/: base.py  s3.py
scripts/: run.sh
terraform/: backend.tf  main.tf  outputs.tf  variables.tf
terraform/bootstrap/: main.tf
