[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tafr-runner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Pin TradingAgents-Funds to a specific commit; bump this SHA when upgrading.
    "tradingagents @ git+https://github.com/jyjulianwong/TradingAgents-Funds.git@63253014084077c4af9063f9c39926dc98bbd2f3",
    "weasyprint>=62.0",
    "markdown>=3.6",
    "boto3>=1.34.0",
]

[tool.setuptools.packages.find]
include = ["runner*"]

[tool.uv]
constraint-dependencies = ["cryptography<49"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]
