[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tafr-runner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "markdown>=3.6",
    # Pin TradingAgents-Funds to a specific commit; bump this SHA when upgrading.
    "tradingagents @ git+https://github.com/jyjulianwong/TradingAgents-Funds.git@0f967bb947c46221e407cad7326557e0d7020b00",
    "weasyprint>=62.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.22",
    "uv-sort>=0.7.1",
]

[tool.setuptools.packages.find]
include = ["runner*"]

[tool.uv]
constraint-dependencies = ["cryptography<49"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["results", "worklog"]

[tool.ruff.lint]
# Standard "good defaults" rule set (pyflakes + pycodestyle + isort + bugbear +
# pyupgrade + comprehensions/simplify). Line length (E501) and layout are owned
# by the formatter; whole-repo `ruff format` adoption is deferred until the
# open-PR backlog clears, to avoid mass merge conflicts.
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]   # intentional re-exports

[tool.ruff.lint.isort]
# Keep multiple aliased names from one module in a single combined import block
# (e.g. the vendor re-exports in interface.py) instead of one statement per name.
combine-as-imports = true
